#4 Organize p-adic solution

--- a/p-adic/p-adic.vcxproj.filters
+++ b/p-adic/p-adic.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Core\padic.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="p-adic.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Core\padic.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
