--- a/p-adic/p-adic.vcxproj
+++ b/p-adic/p-adic.vcxproj
@@ -156,6 +156,7 @@
   <ItemGroup>
     <ClInclude Include="Core\padic.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Utilities\Printing.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Core\padic.cpp" />
@@ -166,6 +167,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Utilities\Printing.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
