--- a/p-adic/p-adic.vcxproj.filters
+++ b/p-adic/p-adic.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="Core\padic.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Utilities\Printing.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -30,6 +33,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Core\padic.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Utilities\Printing.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
