--- a/UnitTests/UnitTests.vcxproj
+++ b/UnitTests/UnitTests.vcxproj
@@ -167,6 +167,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\p-adic\Core\cont_frac.h" />
+    <ClInclude Include="..\p-adic\Core\farey.h" />
+    <ClInclude Include="..\p-adic\Core\fraction.h" />
     <ClInclude Include="..\p-adic\Core\padic.h" />
     <ClInclude Include="..\p-adic\Utilities\Debug.h" />
     <ClInclude Include="..\p-adic\Utilities\Printing.h" />
@@ -175,10 +177,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\p-adic\Core\cont_frac.cpp" />
+    <ClCompile Include="..\p-adic\Core\farey.cpp" />
+    <ClCompile Include="..\p-adic\Core\fraction.cpp" />
     <ClCompile Include="..\p-adic\Core\padic.cpp" />
     <ClCompile Include="..\p-adic\Utilities\Debug.cpp" />
     <ClCompile Include="..\p-adic\Utilities\Printing.cpp" />
     <ClCompile Include="Core\unittest_cont_frac.cpp" />
+    <ClCompile Include="Core\unittest_farey.cpp" />
+    <ClCompile Include="Core\unittest_fraction.cpp" />
     <ClCompile Include="Core\unittest_padic.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
